# dotnet-runtime

./: .gitignore  Directory.Build.props  build.cmd
eng/: build.ps1
eng/native/: configurecompiler.cmake  configureplatform.cmake  configuretools.cmake  init-distro-rid.sh
eng/native/version/: copy_version_files.cmd
src/coreclr/: clr.featuredefines.props
src/installer/pkg/projects/Microsoft.NETCore.DotNetAppHost/: Microsoft.NETCore.DotNetAppHost.pkgproj
src/installer/pkg/projects/Microsoft.NETCore.DotNetHost/: Microsoft.NETCore.DotNetHost.pkgproj
src/installer/pkg/projects/Microsoft.NETCore.DotNetHostPolicy/: Microsoft.NETCore.DotNetHostPolicy.pkgproj
src/installer/pkg/projects/Microsoft.NETCore.DotNetHostResolver/: Microsoft.NETCore.DotNetHostResolver.pkgproj
src/installer/pkg/sfx/Microsoft.NETCore.App/: Microsoft.NETCore.App.Runtime.props
src/libraries/: externals.csproj
src/libraries/Common/src/Interop/Windows/Advapi32/: Interop.EtwEnableCallback.cs  Interop.EventRegister.cs  Interop.EventWriteTransfer.cs
src/libraries/Common/src/System/Security/Cryptography/Asn1/: AsnXml.targets
src/libraries/Microsoft.NETCore.Platforms/src/: runtimeGroups.props
src/libraries/System.Net.Http/src/: System.Net.Http.csproj
src/libraries/System.Private.CoreLib/src/: System.Private.CoreLib.Shared.projitems
src/libraries/System.Private.CoreLib/src/System/: Environment.Unknown.cs  OperatingSystem.cs
src/libraries/System.Private.CoreLib/src/System/Diagnostics/Tracing/: EventProvider.cs  EventSource.cs  IEventProvider.cs
src/libraries/System.Private.CoreLib/src/System/Diagnostics/Tracing/TraceLogging/: TraceLoggingEventSource.cs
src/libraries/System.Private.CoreLib/src/System/IO/: Path.Unix.cs
src/libraries/System.Private.CoreLib/src/System/Threading/: NativeRuntimeEventSource.PortableThreadPool.NativeSinks.cs  PortableThreadPool.GateThread.cs  PortableThreadPool.HillClimbing.cs  PortableThreadPool.IO.Windows.cs  PortableThreadPool.WaitThread.cs  PortableThreadPool.WorkerThread.cs  PortableThreadPool.cs
src/libraries/shims/System/src/: System.cs
src/libraries/shims/src/: System.forwards.cs
src/mono/: CMakeLists.txt  mono.proj
src/mono/System.Private.CoreLib/: System.Private.CoreLib.csproj
src/mono/System.Private.CoreLib/src/System/Diagnostics/Tracing/: NativeRuntimeEventSource.PortableThreadPool.NativeSinks.Mono.cs  NativeRuntimeEventSource.Threading.NativeSinks.Mono.cs
src/mono/cmake/: config.h.in  configure.cmake  eglib-config.h.cmake.in
src/mono/mono/: CMakeLists.txt
src/mono/mono/component/: debugger-engine.c
src/mono/mono/eglib/: gdir-unix.c  gfile-unix.c  gmisc-unix.c
src/mono/mono/metadata/: assembly.c  mono-config.c  sre.c  threads.c
src/mono/mono/mini/: CMakeLists.txt  aot-compiler.c  mini-amd64.c  mini-arm.c  mini-arm64.c  mini-arm64.h  mini-posix.c  mini-windows-dlldac.c
src/mono/mono/profiler/: helper.c
src/mono/mono/sgen/: sgen-los.c  sgen-marksweep.c
src/mono/mono/tools/offsets-tool/: offsets-tool.py
src/mono/mono/tools/offsets-tool/clang/: cindex.py
src/mono/mono/utils/: memfuncs.c  mono-dl-posix.c  mono-log-common.c  mono-log-posix.c  mono-mmap.c  mono-proclib.c  mono-rand.c  mono-threads-freebsd.c  mono-threads-posix-signals.c  mono-threads-posix.c  mono-time.c  networking-missing.c
src/native/corehost/: CMakeLists.txt  build.cmd  corehost.proj
src/native/corehost/fxr/standalone/: CMakeLists.txt
src/native/corehost/hostmisc/: pal.h  pal.unix.cpp
src/native/corehost/nethost/: CMakeLists.txt
src/native/eventpipe/: ds-sources.c
src/native/libs/: CMakeLists.txt  build-native.cmd  build-native.proj  configure.cmake
src/native/libs/Common/: pal_compiler.h
src/native/libs/System.Globalization.Native/: CMakeLists.txt  configure.cmake  pal_collation.c
src/native/libs/System.IO.Compression.Native/: CMakeLists.txt  extra_libs.cmake
src/native/libs/System.IO.Ports.Native/: pal_serial.c  pal_termios.c
src/native/libs/System.Native/: pal_console.c  pal_environment.c  pal_environment.h  pal_interfaceaddresses.c  pal_io.c  pal_maphardwaretype.c  pal_mount.c  pal_networkchange.c  pal_networking.c  pal_process.c  pal_signal.c  pal_uid.c
src/native/libs/System.Net.Security.Native/: CMakeLists.txt
src/native/minipal/: getexepath.h
